<resources>
    <string name="app_name">Pouchy</string>
    <string name="textTitle">Heyy\nPouchy\nBuddy!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="textTitle2">Join Pouchy\nand be our\nBuddy!</string>
    <string name="textTittle3">Ready to manage your money?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="textSignUp">No Pouchy account? Sign up here</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="textTittle4">Forgot your\nPassword?</string>
    <string name="textTittle5">Don’t worry, we’ve got your back!</string>
    <string name="date">Date</string>
    <string name="export">Export</string>
    <string name="username">Username</string>
    <string name="log_in">Log In</string>
    <string name="edit_username">edit_username</string>
</resources>