<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:lineSpacingExtra="4dp"
        android:text="@string/textTitle"
        android:textColor="#ED6276"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_margin="40dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageWallet"
        android:layout_width="195dp"
        android:layout_height="168dp"
        android:src="@drawable/pouchy_logo"
        tools:layout_editor_absoluteX="190dp"
        tools:layout_editor_absoluteY="103dp" />

    <!-- Input Email -->
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="40dp"
        android:background="@drawable/border"
        android:hint="@string/email"
        android:textColorHint="#FFB8BF"
        android:textStyle="bold"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="392dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="40dp"
        android:background="@drawable/border"
        android:hint="@string/password"
        android:textColorHint="#FFB8BF"
        android:textStyle="bold"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="462dp" />

    <TextView
        android:id="@+id/textForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="#FFB8BF"
        android:textSize="15sp"
        android:textStyle="italic|bold"
        tools:layout_editor_absoluteX="254dp"
        tools:layout_editor_absoluteY="525dp" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="40dp"
        android:backgroundTint="#FFB8BF"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_margin="24dp"
        tools:layout_editor_absoluteY="592dp" />

    <TextView
        android:id="@+id/textSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSignUp"
        android:textColor="#FFB8BF"
        android:textSize="18sp"
        android:textStyle="italic|bold"
        app:layout_constraintTop_margin="12dp"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="653dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
